--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -2,4 +2,9 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
+
+@import '../scss/index';
+@import '../scss/animate';
+@import '../scss/color';
