feat: 露營地即時搜尋功能

--- a/assets/scss/_index.scss
+++ b/assets/scss/_index.scss
@@ -1,3 +1,10 @@
+.fixed-top{
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    background-color: rgba(#fff, 0.6);
+    backdrop-filter: blur(10px);
+}
 .header{
     .logo{
         width: 100%;
@@ -48,6 +55,7 @@
         
     }
 }
+
 
 .main{
     .main-container{
