--- a/assets/scss/_result.scss
+++ b/assets/scss/_result.scss
@@ -58,8 +58,37 @@
 
 .weather-container{
     border: 1px solid red;
-    height: 150px;
-    width: 100%;
+        .weather{
+            width: 100%;
+            height: 100%;
+            display: flex;
+            padding: 20px 0;
+            justify-content: space-around;
+            flex-wrap: wrap;
+            .weather__box{
+                background-image: url('../images/weather-bg.png');
+                background-size: cover;
+                background-position: center; 
+                width: 169px;
+                height: 258px;
+                box-shadow: 0 10px 50px rgba(#000, 0.25);
+                padding: 15px 0;
+                position: relative;
+                &-date{
+                    text-align: center;
+                }
+                &-info{
+                    border: 1px solid #000;
+                    padding: 5px 0;
+                }
+                &-time{
+                    position: absolute;
+                    bottom: 15px;
+                    left: 50%;
+                    transform: translateX(-50%);
+                }
+            }
+        }
 }
 
 .trail-container{
