--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -137,8 +137,37 @@
 
 .weather-container {
   border: 1px solid red;
-  height: 150px;
+}
+.weather-container .weather {
   width: 100%;
+  height: 100%;
+  display: flex;
+  padding: 20px 0;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+.weather-container .weather .weather__box {
+  background-image: url("../images/weather-bg.png");
+  background-size: cover;
+  background-position: center;
+  width: 169px;
+  height: 258px;
+  box-shadow: 0 10px 50px rgba(0, 0, 0, 0.25);
+  padding: 15px 0;
+  position: relative;
+}
+.weather-container .weather .weather__box-date {
+  text-align: center;
+}
+.weather-container .weather .weather__box-info {
+  border: 1px solid #000;
+  padding: 5px 0;
+}
+.weather-container .weather .weather__box-time {
+  position: absolute;
+  bottom: 15px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .trail-container {
