--- a/assets/scss/_result.scss
+++ b/assets/scss/_result.scss
@@ -11,11 +11,14 @@
                 display: flex;
                 flex-direction: column;
                 align-items: start;
-                border: 1px solid #000;
                 width: 60%;
                 padding: 25px 0;
                 gap: 15px;
                 cursor: pointer;
+                transition: all .3s ease-out;
+                &:hover{
+                    background-color: rgba(#fff, 0.5);
+                }
             }
             .like-wrapper{
                 button{
