--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -96,11 +96,14 @@
   display: flex;
   flex-direction: column;
   align-items: start;
-  border: 1px solid #000;
   width: 60%;
   padding: 25px 0;
   gap: 15px;
   cursor: pointer;
+  transition: all 0.3s ease-out;
+}
+.result .result-container .result__box-info:hover {
+  background-color: rgba(255, 255, 255, 0.5);
 }
 .result .result-container .result__box .like-wrapper button {
   background-color: transparent;
