--- a/assets/scss/_result.scss
+++ b/assets/scss/_result.scss
@@ -81,8 +81,7 @@
                     text-align: center;
                 }
                 &-info{
-                    border: 1px solid #000;
-                    padding: 5px 0;
+                    padding: 25px;
                 }
                 &-time{
                     position: absolute;
