--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -163,8 +163,7 @@
   text-align: center;
 }
 .weather-container .weather .weather__box-info {
-  border: 1px solid #000;
-  padding: 5px 0;
+  padding: 25px;
 }
 .weather-container .weather .weather__box-time {
   position: absolute;
