feat: scroll加載瀏覽結果

--- a/assets/scss/_result.scss
+++ b/assets/scss/_result.scss
@@ -38,6 +38,12 @@
             }
         }
     }
+    .result-loading{
+        height: 150px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 }
 
 .camp-container{
